@@ -1,3 +1,5 @@
+13 Aug 2004  Documentation for Raman updated (PG)
+
 11 Aug 2004  Manual update and cleanup (GB, PG). 
              Added RANLIB=echo to old Make.* (PG)
 
